2023-11-30T16:20:19Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/7049274485 # 2126
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2023-11-30
* notice: last 14d: unq all: 24 172
* notice: prev accum: outdated-unq outdated-all / unq all: 470 2487 / 496 2662
* notice: next accum: outdated-unq outdated-all / unq all: 470 2487 / 497 2666
* notice: prev exec diff / last date diff / accum: unq all: +1 +4 -0 -0 / +1 +4 -0 -0 / 1 4
* notice: removed / changed dates: [] / [2023-11-30]

2023-11-30T01:07:18Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/7040599374 # 2124
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2023-11-30
* notice: last 14d: unq all: 23 168
* notice: prev accum: outdated-unq outdated-all / unq all: 463 2447 / 495 2660
* notice: next accum: outdated-unq outdated-all / unq all: 470 2487 / 496 2662
* notice: prev exec diff / last date diff / accum: unq all: +1 +2 -1 -7 / +2 +31 -0 -0 / 2 31
* notice: removed / changed dates: [2023-11-15] / [2023-11-16 2023-11-29]

2023-11-29T16:19:58Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/7035451779 # 2123
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2023-11-29
* notice: last 14d: unq all: 27 205
* notice: prev accum: outdated-unq outdated-all / unq all: 463 2447 / 494 2631
* notice: next accum: outdated-unq outdated-all / unq all: 463 2447 / 495 2660
* notice: prev exec diff / last date diff / accum: unq all: +1 +29 -3 -8 / +1 +29 -0 -0 / 1 29
* notice: removed / changed dates: [] / [2023-11-15 2023-11-29]

2023-11-29T01:08:13Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/7026627557 # 2121