@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2023-11-30T16:20:19Z",
-  "count_outdated" : 2487,
-  "uniques_outdated" : 470,
+  "timestamp" : "2023-12-01T01:13:19Z",
+  "count_outdated" : 2498,
+  "uniques_outdated" : 472,
   "count" : 2666,
   "uniques" : 497,
   "views" : [
-    {
-      "timestamp": "2023-11-16T00:00:00Z",
-      "count": 4,
-      "count_minmax": [ 4, 11 ],
-      "count_decinc": [ 7, 11 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 2 ],
-      "uniques_decinc": [ 1, 2 ]
-    },
     {
       "timestamp": "2023-11-17T00:00:00Z",
       "count": 4,
