@@ -1,12 +1,7 @@
 {
-  "count": 172,
-  "uniques": 24,
+  "count": 168,
+  "uniques": 23,
   "views": [
-    {
-      "timestamp": "2023-11-16T00:00:00Z",
-      "count": 4,
-      "uniques": 1
-    },
     {
       "timestamp": "2023-11-17T00:00:00Z",
       "count": 4,
