@@ -1,3 +1,12 @@
+2023-12-01T01:13:19Z:
+* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/7054366923 # 2127
+* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2023-12-01
+* notice: last 14d: unq all: 23 168
+* notice: prev accum: outdated-unq outdated-all / unq all: 470 2487 / 497 2666
+* notice: next accum: outdated-unq outdated-all / unq all: 472 2498 / 497 2666
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
+* notice: removed / changed dates: [2023-11-16] / []
+
 2023-11-30T16:20:19Z:
 * notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/7049274485 # 2126
 * notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2023-11-30
